RESOLVED FIXED 227445
Text decoration renders on top of text when it should be below
https://bugs.webkit.org/show_bug.cgi?id=227445
Summary Text decoration renders on top of text when it should be below
Andy Bell
Reported 2021-06-28 05:39:38 PDT
Created attachment 432386 [details] Safari 14.1.1 Expected behaviour: text decoration renders below the text Actual behaviour: text decoration renders above the text Safari info: 14.1.1 (16611.2.7.1.4) Condensed demo: https://codepen.io/piccalilli/pen/bf9e2945fd33d6aaddd31336f9184e64 Possible issue: The paint order should be underline before text https://drafts.csswg.org/css-text-decor-4/#painting-order
Attachments
Safari 14.1.1 (467.09 KB, image/jpeg)
2021-06-28 05:39 PDT, Andy Bell
no flags
Patch (20.21 KB, patch)
2021-12-12 17:06 PST, Tim Nguyen (:ntim)
no flags
Patch (19.42 KB, patch)
2021-12-12 17:31 PST, Tim Nguyen (:ntim)
no flags
Patch (18.53 KB, patch)
2021-12-12 17:39 PST, Tim Nguyen (:ntim)
no flags
Patch (18.52 KB, patch)
2021-12-13 09:46 PST, Tim Nguyen (:ntim)
no flags
Radar WebKit Bug Importer
Comment 1 2021-07-05 05:40:31 PDT
Tim Nguyen (:ntim)
Comment 2 2021-12-12 17:06:24 PST
Tim Nguyen (:ntim)
Comment 3 2021-12-12 17:31:30 PST
Tim Nguyen (:ntim)
Comment 4 2021-12-12 17:39:08 PST
Myles C. Maxfield
Comment 5 2021-12-12 20:14:57 PST
I think this is a dup of https://bugs.webkit.org/show_bug.cgi?id=196194. I guess I'll reverse-dup...
Myles C. Maxfield
Comment 6 2021-12-12 20:15:12 PST
*** Bug 196194 has been marked as a duplicate of this bug. ***
Sam Sneddon [:gsnedders]
Comment 7 2021-12-13 05:56:50 PST
bug 196841 reverted a previous fix here, due to perf regression
Simon Fraser (smfr)
Comment 8 2021-12-13 08:23:47 PST
Comment on attachment 446955 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=446955&action=review > Source/WebCore/rendering/TextDecorationPainter.cpp:317 > +void TextDecorationPainter::strokeLineThrough(const Color& color, float thickness, const FloatPoint& localOrigin) This use of "stroke" here is easily confused with "text stroke". Just call it paintLineThrough() and limit use the term "stroke" in the code.
Tim Nguyen (:ntim)
Comment 9 2021-12-13 09:46:13 PST
EWS
Comment 10 2021-12-13 10:24:17 PST
Committed r286955 (245180@main): <https://commits.webkit.org/245180@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447018 [details].
Note You need to log in before you can comment on or make changes to this bug.