Fix paint order of CSS text decorations https://bugs.webkit.org/show_bug.cgi?id=227445

Reviewed by Simon Fraser.

Source/WebCore:

* rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::paintForegroundAndDecorations):
(WebCore::TextBoxPainter::createDecorationPainter):
(WebCore::TextBoxPainter::paintBackgroundDecorations):
(WebCore::TextBoxPainter::paintForegroundDecorations):
(WebCore::TextBoxPainter::paintDecoration): Deleted.
* rendering/TextBoxPainter.h:
* rendering/TextDecorationPainter.cpp:
(WebCore::TextDecorationPainter::paintBackgroundDecorations):
(WebCore::TextDecorationPainter::paintForegroundDecorations):
(WebCore::TextDecorationPainter::paintLineThrough):
(WebCore::TextDecorationPainter::paintTextDecoration): Deleted.
* rendering/TextDecorationPainter.h:

LayoutTests:

* TestExpectations:



Canonical link: https://commits.webkit.org/245180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286955 268f45cc-cd09-0410-ab3c-d52691b4dbfc